feat: Exercise 3 of 13
Create a server which responds to requests to / with a static HTML file named index.html

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/mojaray2k/makemehapi#readme",
   "dependencies": {
-    "hapi": "^17.2.2"
+    "hapi": "^17.2.2",
+    "inert": "^5.1.0",
+    "vision": "^5.3.1"
   }
 }
