--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/mojaray2k/makemehapi#readme",
   "dependencies": {
+    "handlebars": "^4.0.11",
     "hapi": "^17.2.2",
     "inert": "^5.1.0",
     "vision": "^5.3.1"
